--- a/index.html
+++ b/index.html
@@ -1,74 +1,91 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KarlTech - Soutien Informatique</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <header>
-    <div class="container">
-      <img src="logo.png" alt="Logo KarlTech" class="logo" />
+    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 60px; float: left; margin-right: 20px;">
+    <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
+    <div style="clear: both;"></div>
   </header>
 
-  <section id="pourquoi">
-    <div class="container">
-      <h2>Pourquoi choisir KarlTech ?</h2>
-      <p>Chez <strong>KarlTech</strong>, nous croyons que chaque client mérite un service informatique à la fois <strong>fiable</strong>, <strong>personnalisé</strong> et <strong>abordable</strong>. Que vous soyez un particulier ou une petite entreprise, nous offrons une assistance rapide et adaptée à vos besoins.</p>
-      <ul>
-        <li>✅ <strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
-        <li>✅ <strong>Transparence totale</strong> sur les tarifs et les interventions</li>
-        <li>✅ <strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
-        <li>✅ <strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, et bien plus</li>
-        <li>✅ <strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</li>
-      </ul>
-      <p>Notre approche humaine et professionnelle fait la différence : nous <strong>privilégions la clarté, la pédagogie, et la satisfaction à long terme</strong> de nos clients.</p>
-    </div>
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
+    <a href="faq.html">FAQ</a>
+    <a href="#contact">Contact</a>
+    <a href="#apropos">À propos</a>
+  </nav>
+
+  <section>
+    <h2>Pourquoi choisir KarlTech ?</h2>
+    <p>
+      Chez <strong>KarlTech</strong>, nous croyons que chaque client mérite un service informatique à la fois <strong>fiable, personnalisé et abordable</strong>.
+      Que vous soyez un particulier ou une petite entreprise, nous offrons une assistance rapide et adaptée à vos besoins.
+    </p>
+    <ul>
+      <li><strong>Service à domicile ou à distance</strong> – selon votre préférence et votre confort</li>
+      <li><strong>Transparence totale</strong> sur les tarifs et les interventions</li>
+      <li><strong>Conseils clairs, honnêtes et adaptés</strong> à votre niveau de connaissance</li>
+      <li><strong>Expérience concrète</strong> avec les systèmes Windows, les logiciels courants, les périphériques, etc.</li>
+      <li><strong>Flexibilité et disponibilité</strong> dans la région de Shawinigan et ses environs</li>
+    </ul>
+    <p>
+      Notre approche humaine et professionnelle fait la différence : nous privilégions la clarté, la pédagogie et la satisfaction à long terme de nos clients.
+    </p>
   </section>
 
-  <section id="services">
-    <div class="container">
-      <h2>Nos services populaires</h2>
-      <ul>
-        <li>
-          <h3>🔧 Formatage et réinstallation système</h3>
-          <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
-        </li>
-        <li>
-          <h3>🛡️ Suppression de virus et sécurisation</h3>
-          <p>Nettoyage complet, installation d’antivirus, et conseils pour mieux protéger votre appareil.</p>
-        </li>
-        <li>
-          <h3>💾 Sauvegarde et récupération de données</h3>
-          <p>Vous avez perdu des fichiers ? On vous aide à les récupérer et à mettre en place une stratégie de sauvegarde efficace.</p>
-        </li>
-        <li>
-          <h3>💡 Installation de logiciels et configuration personnalisée</h3>
-          <p>Bureautique, multimédia, logiciels spécialisés : on installe, configure, et vous explique.</p>
-        </li>
-        <li>
-          <h3>🖥️ Montage et optimisation d’ordinateurs sur mesure</h3>
-          <p>Pour le travail, le gaming ou la maison : on vous guide dans le choix des pièces, on assemble, on teste.</p>
-        </li>
-        <li>
-          <h3>🧰 Diagnostic complet avec recommandation</h3>
-          <p>Votre ordinateur pose problème ? On fait un bilan technique, on vous explique le souci et on propose des solutions claires.</p>
-        </li>
-      </ul>
-    </div>
+  <section>
+    <h2>Nos services populaires</h2>
+    <h3>Formatage et réinstallation système</h3>
+    <p>Optimisez un ordinateur lent ou infecté : effacement propre, réinstallation de Windows, mises à jour et pilotes.</p>
+
+    <h3>Suppression de virus et sécurisation</h3>
+    <p>Nettoyage complet de votre système avec suppression des logiciels malveillants et amélioration des performances.</p>
+
+    <h3>Assistance à distance</h3>
+    <p>Intervention rapide via AnyDesk, sans déplacement, pour une solution simple et efficace.</p>
+
+    <h3>Installation de pièces ou logiciels</h3>
+    <p>Mise à niveau de votre PC ou ajout de logiciels essentiels pour votre productivité et confort d'utilisation.</p>
+
+    <p><a href="services_tarifs.html" style="font-weight: bold; color: #66b2ff;">→ Voir tous les services et tarifs</a></p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Courriel : <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+    <p>Téléphone : <a href="tel:8738879620">873-887-9620</a></p>
+    <p>Site web : <a href="https://www.karltech.ca">www.karltech.ca</a></p>
+
+    <h3>Formulaire de contact</h3>
+    <form action="https://formspree.io/f/mnnvdepz" method="POST">
+      <input type="text" name="nom" placeholder="Votre nom" required>
+      <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+      <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+      <button type="submit">Envoyer</button>
+    </form>
+  </section>
+
+  <section id="apropos">
+    <h2>À propos</h2>
+    <p>
+      Nous sommes une équipe passionnée de technologie et de dépannage informatique depuis plus de 10 ans. Avec KarlTech, notre objectif est simple : offrir un service humain, rapide et de qualité pour vous aider à retrouver un ordinateur performant, que ce soit à la maison, à distance ou sur place.
+    </p>
+    <p>
+      Notre approche est personnalisée, sans jargon compliqué, et toujours adaptée à vos besoins. Que vous soyez un particulier ou un travailleur autonome, nous sommes là pour vous simplifier la vie numérique.
+    </p>
   </section>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
-    </div>
+    &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 </body>
-
 </html>
