--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -9,44 +8,51 @@
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 60px; float: left; margin-right: 20px;">
+    <img src="logo_karltech.png" alt="Logo KarlTech">
     <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
-    <div style="clear: both;"></div>
   </header>
 
   <nav>
     <a href="index.html">Accueil</a>
     <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
-    <a href="contact.html" class="active">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 
-  <section>
-    <h2>Nous joindre</h2>
-    <p><strong>Courriel :</strong> <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
-    <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
-    <p><strong>Heures d'ouverture :</strong><br>
-    Lundi au Vendredi : 17h00 à 21h00<br>
-    Samedi et Dimanche : 8h00 à 18h00</p>
+  <main>
+    <section>
+      <h2>Nous joindre</h2>
+      <p><strong>Courriel :</strong> <a href="mailto:info@karltech.ca">info@karltech.ca</a></p>
+      <p><strong>Téléphone :</strong> <a href="tel:8738879620">873-887-9620</a></p>
+      <p><strong>Adresse :</strong> Shawinigan, QC</p>
 
+      <h3>Horaires d'ouverture</h3>
+      <ul>
+        <li>Lundi au vendredi : 17 h à 21 h</li>
+        <li>Samedi et dimanche : 9 h à 18 h</li>
+      </ul>
 
-    <h3>Formulaire de contact</h3>
-    <form action="https://formspree.io/f/mnnvdepz" method="POST">
-      <input type="text" name="nom" placeholder="Votre nom" required>
-      <input type="email" name="email" placeholder="Votre adresse e-mail" required>
-      <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
-      <button type="submit">Envoyer</button>
-    </form>
-  </section>
+      <h3>Formulaire de contact</h3>
+      <form action="https://formspree.io/f/mnnvdepz" method="POST">
+        <input type="text" name="nom" placeholder="Votre nom" required>
+        <input type="email" name="email" placeholder="Votre adresse e-mail" required>
+        <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+        <button type="submit">Envoyer</button>
+      </form>
+
+      <h3>Prendre rendez-vous</h3>
+      <a href="https://calendly.com/karltech?lang=fr" target="_blank" style="display: inline-block; background-color: #2d2d44; color: white; padding: 12px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">
+        Réserver un rendez-vous 📅
+      </a>
+    </section>
+  </main>
 
   <footer>
-  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
-  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
-</footer>
-
+    <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
