--- a/services_tarifs.html
+++ b/services_tarifs.html
@@ -1,88 +1,82 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services et Tarifs - KarlTech</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="logo_karltech.png" alt="Logo KarlTech" style="height: 60px; float: left; margin-right: 20px;">
+    <img src="logo_karltech.png" alt="Logo KarlTech" />
     <div>
       <h1>KarlTech</h1>
       <p>Soutien informatique personnalisé à Shawinigan et environs</p>
     </div>
-    <div style="clear: both;"></div>
   </header>
 
   <nav>
     <a href="index.html">Accueil</a>
-    <a href="services_tarifs.html" class="active">Services et Tarifs</a>
+    <a href="services_tarifs.html">Services et Tarifs</a>
     <a href="faq.html">FAQ</a>
     <a href="contact.html">Contact</a>
   </nav>
 
-  <section>
-    <h2>Nos services populaires</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Service</th>
-          <th>Description</th>
-          <th>Prix</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Formatage / réinstallation de Windows</td>
-          <td>Réinitialisation complète avec mise à jour des pilotes et logiciels essentiels</td>
-          <td>60 $</td>
-        </tr>
-        <tr>
-          <td>Suppression de virus et optimisation</td>
-          <td>Nettoyage complet et sécurisation de votre système</td>
-          <td>50 $</td>
-        </tr>
-        <tr>
-          <td>Montage d’ordinateur personnalisé (Custom Build)</td>
-          <td>Assemblage sur mesure selon vos pièces ou sur devis complet avec recommandation</td>
-          <td>Sur devis</td>
-        </tr>
-        <tr>
-          <td>Assistance à distance (AnyDesk)</td>
-          <td>Connexion rapide à distance pour intervention immédiate</td>
-          <td>40 $</td>
-        </tr>
-        <tr>
-          <td>Installation de pièces matérielles</td>
-          <td>Ajout ou remplacement de composantes (RAM, SSD, carte graphique...)</td>
-          <td>40 $</td>
-        </tr>
-        <tr>
-          <td>Installation de logiciels</td>
-          <td>Installation de Microsoft Office, antivirus, ou autres applications</td>
-          <td>30 $</td>
-        </tr>
-        <tr>
-          <td>Sauvegarde ou récupération de données</td>
-          <td>Clonage, sauvegarde externe ou tentative de récupération</td>
-          <td>60 $</td>
-        </tr>
-        <tr>
-          <td>Autres services</td>
-          <td>À la demande du client : configuration, dépannage, formation, etc.</td>
-          <td>Sur devis</td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+  <main>
+    <section>
+      <h2>Nos services et tarifs</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Service</th>
+            <th>Description</th>
+            <th>Prix</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Formatage / Réinstallation de Windows</td>
+            <td>Installation propre de Windows avec pilotes et mises à jour</td>
+            <td>60 $</td>
+          </tr>
+          <tr>
+            <td>Suppression de virus</td>
+            <td>Nettoyage complet du système avec optimisation</td>
+            <td>50 $</td>
+          </tr>
+          <tr>
+            <td>Assemblage sur mesure (custom PC)</td>
+            <td>Montage complet selon les pièces fournies ou sur devis</td>
+            <td>Sur devis</td>
+          </tr>
+          <tr>
+            <td>Installation de pièces</td>
+            <td>Ajout ou remplacement de RAM, SSD, carte graphique, etc.</td>
+            <td>40 $</td>
+          </tr>
+          <tr>
+            <td>Installation de logiciels</td>
+            <td>Installation de Microsoft Office, antivirus, ou autres applications</td>
+            <td>30 $</td>
+          </tr>
+          <tr>
+            <td>Sauvegarde ou récupération de données</td>
+            <td>Clonage, sauvegarde externe ou tentative de récupération</td>
+            <td>60 $</td>
+          </tr>
+          <tr>
+            <td>Autres services</td>
+            <td>À la demande du client : configuration, dépannage, formation, etc.</td>
+            <td>Sur devis</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </main>
 
- <footer>
-  <p><a href="index.html">&larr; Retour à l'accueil</a></p>
-  <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
-</footer>
-
+  <footer>
+    <p><a href="index.html">&larr; Retour à l'accueil</a></p>
+    <p>&copy; 2025 KarlTech. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
