--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <!-- Contenu principal -->
   <main>
-    <!-- Slider “Pourquoi choisir KarlTech ?” -->
+    <!-- Slider "Pourquoi choisir KarlTech ?" -->
     <section id="why">
       <div class="why-slider">
         <!-- Slide 1 -->
-        <div class="why-slide active" data-index="0">
+        <div class="why-slide active">
           <p>
             <strong>Service à domicile ou à distance</strong><br>
             Que vous préfériez la présence d’un technicien chez vous pour un diagnostic précis,<br>
@@ -40,7 +40,7 @@
           </p>
         </div>
         <!-- Slide 2 -->
-        <div class="why-slide" data-index="1">
+        <div class="why-slide">
           <p>
             <strong>Disponibilité en soirée</strong><br>
             Nous comprenons que votre emploi du temps peut être chargé pendant la journée.<br>
@@ -50,7 +50,7 @@
           </p>
         </div>
         <!-- Slide 3 -->
-        <div class="why-slide" data-index="2">
+        <div class="why-slide">
           <p>
             <strong>Transparence totale</strong><br>
             Avant chaque intervention, vous recevez un devis détaillé et gratuit,<br>
@@ -60,7 +60,7 @@
           </p>
         </div>
         <!-- Slide 4 -->
-        <div class="why-slide" data-index="3">
+        <div class="why-slide">
           <p>
             <strong>Conseils clairs et adaptés</strong><br>
             Fini le jargon technique complexe : nous expliquons chaque étape de manière simple et pédagogique.<br>
@@ -69,43 +69,20 @@
             Ainsi, vous repartez avec un ordinateur performant et des connaissances durables.
           </p>
         </div>
-        <!-- Slide 5 -->
-        <div class="why-slide" data-index="4">
-          <p>
-            <strong>Expérience concrète</strong><br>
-            Forts de plus de 10 ans de dépannage Windows, optimisation PC et montage de matériel,<br>
-            nous intervenons sur des milliers de machines, domestiques et professionnelles.<br>
-            Chaque intervention s’appuie sur des procédures éprouvées et des outils de diagnostic avancés.<br>
-            Vous bénéficiez d’un savoir-faire reconnu pour des solutions fiables et durables.
-          </p>
-        </div>
-        <!-- Slide 6 -->
-        <div class="why-slide" data-index="5">
-          <p>
-            <strong>Flexibilité et proximité</strong><br>
-            Implantés à Shawinigan, nous couvrons toute la région et ses environs pour une réponse rapide.<br>
-            Nous proposons des rendez-vous en semaine, en soirée et le week-end pour vos urgences.<br>
-            Un suivi attentif post-intervention vous assure la pérennité de nos solutions.<br>
-            KarlTech, c’est la tranquillité d’esprit à portée de clic.
-          </p>
-        </div>
       </div>
 
       <!-- Puces de navigation -->
       <ul class="why-nav">
-        <li class="active" data-index="0"></li>
-        <li data-index="1"></li>
-        <li data-index="2"></li>
-        <li data-index="3"></li>
-        <li data-index="4"></li>
-        <li data-index="5"></li>
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </section>
 
     <!-- Services populaires -->
     <section id="servicesSection">
       <h2>Nos services populaires</h2>
-
       <h3>Formatage et réinstallation système</h3>
       <p>Restauration complète de Windows avec pilotes et mises à jour intégrés pour redonner vie à votre machine.</p>
 
@@ -117,16 +94,6 @@
 
       <h3>Installation de pièces ou logiciels</h3>
       <p>Montage et configuration de RAM, SSD, carte graphique, logiciels Office, antivirus et plus selon vos besoins.</p>
-
-      <p><a href="services_tarifs.html">→ Voir tous les services et tarifs</a></p>
-    </section>
-
-    <!-- À propos -->
-    <section id="aproposSection">
-      <h2>À propos de KarlTech</h2>
-      <p>Chez KarlTech, nous sommes passionnés par l'informatique et le dépannage. Depuis plus de 5 ans, notre équipe met son expertise à votre service pour vous offrir des solutions rapides, fiables et adaptées à vos besoins. Notre objectif : simplifier votre quotidien numérique, que vous soyez un particulier ou une entreprise.</p>
-      <p>Nous savons à quel point il est important d’avoir un système performant et sécurisé. C’est pourquoi nous nous engageons à offrir un service personnalisé, en prenant le temps de bien comprendre vos défis et en vous proposant des solutions claires et efficaces. Notre engagement envers la qualité et la transparence fait de nous un partenaire de confiance pour vos besoins en technologie.</p>
-      <p>Chez KarlTech, chaque mission est une occasion de prouver que la technologie peut être simple et accessible à tous. Grâce à des années d'expérience, nous avons développé une approche qui allie conseils techniques éclairés, réactivité et service client irréprochable. Nous ne nous contentons pas de réparer, nous formons et accompagnons nos clients, leur permettant de maîtriser et optimiser leur matériel avec sérénité.</p>
     </section>
 
   </main>
@@ -137,25 +104,26 @@
     &copy; 2025 KarlTech. Tous droits réservés.
   </footer>
 
-  <!-- Script du slider et défilement molette -->
+  <!-- Script du slider -->
   <script>
     (function(){
       const slides = document.querySelectorAll('.why-slide');
-      const dots   = document.querySelectorAll('.why-nav li');
+      const dots = document.querySelectorAll('.why-nav li');
       let idx = 0;
+
       function show(i) {
-        slides.forEach(s=>s.classList.remove('active'));
-        dots.forEach(d=>d.classList.remove('active'));
+        slides.forEach(s=> s.classList.remove('active'));
+        dots.forEach(d=> d.classList.remove('active'));
         slides[i].classList.add('active');
         dots[i].classList.add('active');
         idx = i;
       }
+
       dots.forEach(d=> d.addEventListener('click', ()=> show(+d.dataset.index)));
-      document.getElementById('why').addEventListener('wheel', e=>{
-        e.preventDefault();
-        const dir = e.deltaY > 0 ? 1 : -1;
-        show((idx + dir + slides.length) % slides.length);
-      });
+
+      setInterval(() => {
+        show((idx + 1) % slides.length);
+      }, 5000); // Change every 5 seconds
     })();
   </script>
 </body>
